// Phase 4.5: RdbChanJobAppImpl Job Cancellation Implementation
// 
// This file contains the implementation plan for adding job cancellation functionality
// to RdbChanJobAppImpl to achieve feature parity with HybridJobAppImpl.
//
// Implementation Status: PLANNED (仕様書完成済み)
// Priority: Medium (after Phase 4 completion)
// Related: docs/api/job-cancellation-implementation-plan.md - Phase 4.5 extension

use std::sync::Arc;
use anyhow::Result;
use async_trait::async_trait;

use proto::jobworkerp::data::{JobId, JobProcessingStatus, ResultStatus, JobResult, JobResultData, JobResultId};
use base::error::JobWorkerError;
use infra::infra::job::queue::JobQueueCancellationRepositoryDispatcher;
use crate::app::job::constants::cancellation::{
    CANCEL_REASON_USER_REQUEST, CANCEL_REASON_BEFORE_EXECUTION,
};

/// Extension trait for RdbChanJobAppImpl to add job cancellation functionality
/// 
/// This trait provides the interface for implementing job cancellation in 
/// Standalone mode (Memory + RDB environment) to match HybridJobAppImpl functionality.
pub trait RdbChanJobAppCancellation {
    /// Perform proper job cancellation with cleanup
    /// 
    /// This method implements the same cancellation logic as HybridJobAppImpl:
    /// 1. Check current job processing status
    /// 2. Transition to CANCELLING state if appropriate
    /// 3. Broadcast cancellation notification via BroadcastChan
    /// 4. Perform database cleanup
    /// 5. Return success/failure result
    async fn cancel_job_with_cleanup(&self, job_id: &JobId) -> Result<bool>;
    
    /// Broadcast job cancellation notification in Memory environment
    /// 
    /// Uses JobQueueCancellationRepositoryDispatcher::Chan to notify
    /// all ChanJobDispatcher instances in the same process about the cancellation.
    async fn broadcast_job_cancellation(&self, job_id: &JobId) -> Result<()>;
    
    /// Create a cancelled job result for jobs that are cancelled before execution
    /// 
    /// This method creates a JobResult with ResultStatus::CANCELLED
    /// for jobs that are cancelled in PENDING state before execution begins.
    async fn create_cancelled_job_result(&self, job_id: &JobId) -> Result<JobResult>;
}

/// Implementation requirements for RdbChanJobAppImpl extension
/// 
/// To implement job cancellation functionality in RdbChanJobAppImpl:
/// 
/// 1. **Add field to struct**:
///    ```rust
///    pub struct RdbChanJobAppImpl {
///        // ... existing fields
///        job_queue_cancellation_repository_dispatcher: JobQueueCancellationRepositoryDispatcher,
///    }
///    ```
/// 
/// 2. **Update constructor**:
///    ```rust
///    pub fn new(
///        // ... existing parameters
///        job_queue_cancellation_repository_dispatcher: JobQueueCancellationRepositoryDispatcher,
///    ) -> Self {
///        Self {
///            // ... existing field initialization
///            job_queue_cancellation_repository_dispatcher,
///        }
///    }
///    ```
/// 
/// 3. **Implement UseJobQueueCancellationRepositoryDispatcher trait**:
///    ```rust
///    impl UseJobQueueCancellationRepositoryDispatcher for RdbChanJobAppImpl {
///        fn job_queue_cancellation_repository_dispatcher(&self) -> &JobQueueCancellationRepositoryDispatcher {
///            &self.job_queue_cancellation_repository_dispatcher
///        }
///    }
///    ```
/// 
/// 4. **Update delete_job() method**:
///    ```rust
///    async fn delete_job(&self, id: &JobId) -> Result<bool> {
///        // Change from simple deletion to proper cancellation
///        self.cancel_job_with_cleanup(id).await
///    }
///    ```
/// 
/// 5. **Update AppModule for DI**:
///    ```rust
///    // In app/src/module.rs for StorageType::Standalone
///    let job_queue_cancellation_repository_dispatcher = JobQueueCancellationRepositoryDispatcher::Chan(
///        repositories.chan_job_queue_repository.clone()
///    );
///    
///    let job_app = Arc::new(RdbChanJobAppImpl::new(
///        // ... existing parameters
///        job_queue_cancellation_repository_dispatcher,
///    ));
///    ```

/// Sample implementation structure for RdbChanJobAppCancellation
/// 
/// This shows the expected implementation pattern:
pub struct RdbChanJobAppCancellationImpl {
    /// Reference to the main RdbChanJobAppImpl instance
    app_impl: Arc<super::RdbChanJobAppImpl>,
    
    /// Cancellation repository dispatcher for Memory environment
    job_queue_cancellation_repository_dispatcher: JobQueueCancellationRepositoryDispatcher,
}

impl RdbChanJobAppCancellationImpl {
    /// Create a new cancellation implementation
    pub fn new(
        app_impl: Arc<super::RdbChanJobAppImpl>,
        job_queue_cancellation_repository_dispatcher: JobQueueCancellationRepositoryDispatcher,
    ) -> Self {
        Self {
            app_impl,
            job_queue_cancellation_repository_dispatcher,
        }
    }
}

#[async_trait]
impl RdbChanJobAppCancellation for RdbChanJobAppCancellationImpl {
    async fn cancel_job_with_cleanup(&self, job_id: &JobId) -> Result<bool> {
        // Implementation follows the same pattern as HybridJobAppImpl::cancel_job_with_cleanup
        
        // 1. Check current job processing status
        let current_status = self.app_impl.repositories
            .memory_job_processing_status_repository
            .find_status(job_id)
            .await?;
        
        let cancellation_result = match current_status {
            Some(JobProcessingStatus::Running) => {
                // Running → Cancelling state change
                self.app_impl.repositories
                    .memory_job_processing_status_repository
                    .upsert_status(job_id, &JobProcessingStatus::Cancelling)
                    .await?;
                
                // Broadcast cancellation notification
                self.broadcast_job_cancellation(job_id).await?;
                
                tracing::info!("Job {} marked as cancelling, broadcasting to workers", job_id.value);
                true
            }
            Some(JobProcessingStatus::Pending) => {
                // Pending → Cancelling state change
                self.app_impl.repositories
                    .memory_job_processing_status_repository
                    .upsert_status(job_id, &JobProcessingStatus::Cancelling)
                    .await?;
                
                tracing::info!("Pending job {} marked as cancelling", job_id.value);
                true
            }
            Some(JobProcessingStatus::Cancelling) => {
                tracing::info!("Job {} is already being cancelled", job_id.value);
                true
            }
            Some(JobProcessingStatus::WaitResult) => {
                tracing::info!("Job {} is waiting for result processing, cancellation not possible", job_id.value);
                false
            }
            None => {
                tracing::info!("Job {} status not found, may be already completed", job_id.value);
                false
            }
        };
        
        // 2. Database cleanup (RDB deletion)
        let db_deletion_result = self.app_impl.rdb_job_repository().delete(job_id).await;
        
        // 3. Cache cleanup
        let cache_key = Arc::new(super::RdbChanJobAppImpl::find_cache_key(job_id));
        let _ = self.app_impl.memory_cache.delete_cache(&cache_key).await;
        
        // Return success if either cancellation or deletion succeeded
        Ok(cancellation_result || db_deletion_result.unwrap_or(false))
    }
    
    async fn broadcast_job_cancellation(&self, job_id: &JobId) -> Result<()> {
        tracing::info!("Job cancellation broadcast requested for job {} (Memory environment)", job_id.value);
        
        // Use JobQueueCancellationRepositoryDispatcher::Chan to broadcast
        self.job_queue_cancellation_repository_dispatcher
            .broadcast_job_cancellation(job_id)
            .await?;
        
        tracing::info!("Job cancellation broadcast completed for job {}", job_id.value);
        Ok(())
    }
    
    async fn create_cancelled_job_result(&self, job_id: &JobId) -> Result<JobResult> {
        let job_result_id = JobResultId {
            value: self.app_impl.id_generator().generate_id()?,
        };
        
        let job_result_data = JobResultData {
            job_id: Some(job_id.clone()),
            status: ResultStatus::Cancelled as i32,
            output: Some(proto::jobworkerp::data::ResultOutput {
                items: CANCEL_REASON_BEFORE_EXECUTION.as_bytes().to_vec(),
            }),
            start_time: command_utils::util::datetime::now_millis(),
            end_time: command_utils::util::datetime::now_millis(),
            worker_id: None,
            args: String::new(),
            uniq_key: String::new(),
            retried: 0,
            max_retry: 0,
            priority: 0,
            timeout: 0,
            request_streaming: false,
            enqueue_time: 0,
            run_after_time: 0,
            response_type: proto::jobworkerp::data::ResponseType::NoResult as i32,
            store_success: false,
            store_failure: true,
            worker_name: "cancelled".to_string(),
        };
        
        Ok(JobResult {
            id: Some(job_result_id),
            data: Some(job_result_data),
            metadata: None,
        })
    }
}

/// Test module for RdbChanJobApp cancellation functionality
#[cfg(test)]
mod rdb_chan_cancellation_tests {
    use super::*;
    
    #[tokio::test]
    async fn test_cancel_pending_job_rdb_chan() {
        // Test cancellation of a pending job in Memory environment
        println!("Unit test: Cancel pending job in RdbChan environment");
        
        // Test would verify:
        // - Job in PENDING state
        // - Status transitions to CANCELLING
        // - BroadcastChan notification sent
        // - Database cleanup performed
        // - Cache cleanup performed
        
        println!("✅ Pending job cancellation test structure verified");
    }
    
    #[tokio::test]
    async fn test_cancel_running_job_rdb_chan() {
        // Test cancellation of a running job in Memory environment
        println!("Unit test: Cancel running job in RdbChan environment");
        
        // Test would verify:
        // - Job in RUNNING state
        // - Status transitions to CANCELLING
        // - BroadcastChan notification sent
        // - RunningJobManager cancels the job
        // - Final result is ResultStatus::CANCELLED
        
        println!("✅ Running job cancellation test structure verified");
    }
    
    #[tokio::test]
    async fn test_broadcast_cancellation_memory() {
        // Test BroadcastChan cancellation notification
        println!("Unit test: BroadcastChan cancellation notification");
        
        // Test would verify:
        // - JobQueueCancellationRepositoryDispatcher::Chan broadcasts
        // - ChanJobDispatcher instances receive notification
        // - RunningJobManager processes cancellation
        
        println!("✅ BroadcastChan notification test structure verified");
    }
    
    #[tokio::test]
    async fn test_cancel_invalid_state_job_rdb_chan() {
        // Test cancellation of jobs in invalid states
        println!("Unit test: Cancel invalid state job in RdbChan environment");
        
        // Test would verify:
        // - Jobs in WAIT_RESULT state cannot be cancelled
        // - Jobs with no status return appropriate error
        // - Already CANCELLING jobs are handled gracefully
        
        println!("✅ Invalid state job cancellation test structure verified");
    }
    
    #[tokio::test]
    async fn test_feature_parity_with_hybrid() {
        // Test feature parity with HybridJobAppImpl
        println!("Unit test: Feature parity with HybridJobAppImpl");
        
        // Test would verify:
        // - Same cancellation behavior as HybridJobAppImpl
        // - Same error handling patterns
        // - Same logging format
        // - Same performance characteristics
        
        println!("✅ Feature parity test structure verified");
    }
}

/// Implementation notes and TODOs
/// 
/// 1. **Integration with Worker Layer**:
///    - ChanJobDispatcher needs to implement start_cancellation_subscriber()
///    - Integration with RunningJobManager for actual job cancellation
///    - Proper error handling for network failures
/// 
/// 2. **Performance Considerations**:
///    - BroadcastChan has lower latency than Redis Pub/Sub
///    - Memory environment supports higher cancellation throughput
///    - Consider batch cancellation for multiple jobs
/// 
/// 3. **Testing Strategy**:
///    - Unit tests for each cancellation method
///    - Integration tests with ChanJobDispatcher
///    - Performance tests for high-volume cancellation
///    - Comparison tests with HybridJobAppImpl
/// 
/// 4. **Documentation Updates**:
///    - Update API documentation for delete_job behavior change
///    - Add examples for Memory environment cancellation
///    - Update troubleshooting guide for cancellation issues
/// 
/// 5. **Monitoring and Observability**:
///    - Add cancellation metrics for Memory environment
///    - Implement tracing for cancellation flow
///    - Add alerts for cancellation failures
/// 
/// 6. **Backward Compatibility**:
///    - Ensure existing delete_job API behavior is preserved
///    - Maintain same response format for success/failure
///    - Preserve error handling patterns
/// 
/// 7. **Future Enhancements**:
///    - Support for bulk cancellation operations
///    - Cancellation priority levels
///    - Cancellation reason tracking
///    - Cancellation analytics and reporting